Implementação de ServicoIndisponivelException no FeriadoService, caso a API esteja fora do ar ou não consiga retornar uma reposta no tempo estipulado